feat: add Renovation Type on Quotes
