# swagger/v1/mon-devis-sans-oublis_api_v1_partner_swagger.yaml
@@ -102,11 +102,24 @@ paths:
                   type: string
                   description: Représentation Markdown du contenu du fichier
                   nullable: true
-                metadata:
-                  "$ref": "#/components/schemas/quote_check_metadata"
+                reference:
+                  type: string
                   nullable: true
                 profile:
-                  "$ref": "#/components/schemas/profile"
+                  allOf:
+                  - "$ref": "#/components/schemas/profile"
+                  description: hérité du QuoteCase à la création si vide
+                  nullable: true
+                renovation_type:
+                  allOf:
+                  - "$ref": "#/components/schemas/renovation_type"
+                  description: hérité du QuoteCase à la création si vide
+                  nullable: true
+                metadata:
+                  allOf:
+                  - "$ref": "#/components/schemas/quote_check_metadata"
+                  description: hérité du QuoteCase à la création si vide
+                  nullable: true
                 parent_id:
                   type: string
                   description: Ancienne soumission du fichier
@@ -168,6 +181,32 @@ paths:
                 reference:
                   type: string
                   nullable: true
+                profile:
+                  "$ref": "#/components/schemas/profile"
+                renovation_type:
+                  "$ref": "#/components/schemas/renovation_type"
+                metadata:
+                  "$ref": "#/components/schemas/quote_check_metadata"
+                  nullable: true
+  "/renovation_types":
+    get:
+      summary: Récupérer les profils disponibles
+      tags:
+      - Profils
+      responses:
+        '200':
+          description: liste des renovation_types
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    data:
+                      type: "#/components/schemas/renovation_type"
+                required:
+                - data
   "/stats":
     get:
       summary: Récupérer les stats
@@ -200,7 +239,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://www.datatourisme.fr/ontology/core/1.0/#siret
-          x-cardinality: 63441
+          x-cardinality: 63297
           x-capabilities: {}
           x-concept:
             id: siret
@@ -211,7 +250,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://www.w3.org/2000/01/rdf-schema#label
-          x-cardinality: 62935
+          x-cardinality: 62941
           x-capabilities: {}
           x-concept:
             id: label
@@ -222,7 +261,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://schema.org/address
-          x-cardinality: 63825
+          x-cardinality: 63812
           x-capabilities: {}
           x-concept:
             id: address
@@ -233,7 +272,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://schema.org/postalCode
-          x-cardinality: 5988
+          x-cardinality: 5984
           x-capabilities: {}
           x-concept:
             id: postalCode
@@ -244,7 +283,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://schema.org/City
-          x-cardinality: 19458
+          x-cardinality: 19467
           x-capabilities: {}
           x-concept:
             id: city
@@ -275,7 +314,7 @@ components:
           type: string
           description: ''
           x-refersTo: https://www.w3.org/2006/vcard/ns#tel
-          x-cardinality: 59757
+          x-cardinality: 59728
           x-capabilities: {}
           x-concept:
             id: tel
@@ -286,7 +325,7 @@ components:
           type: string
           description: ''
           x-refersTo: https://www.w3.org/2006/vcard/ns#email
-          x-cardinality: 61651
+          x-cardinality: 61601
           x-capabilities: {}
           x-concept:
             id: email
@@ -297,7 +336,7 @@ components:
           type: string
           description: ''
           x-refersTo: https://schema.org/WebPage
-          x-cardinality: 37610
+          x-cardinality: 37619
           x-capabilities: {}
           x-concept:
             id: webPage
@@ -320,7 +359,7 @@ components:
           type: string
           description: ''
           x-refersTo: http://schema.org/DigitalDocument
-          x-cardinality: 75941
+          x-cardinality: 75918
           x-capabilities: {}
           x-concept:
             id: attachment
@@ -346,8 +385,8 @@ components:
           - Chauffage +
           - QualiPV 500
           - Qualisol Combi
-          - QualiPAC module CET
           - CertiRénov RGE par CERQUAL Qualitel Certification
+          - QualiPAC module CET
           - CERTIBAT-RGE
           - AUDIT ENERGETIQUE BATIMENT
           - Qualiforage Sonde
@@ -462,7 +501,7 @@ components:
           description: Cette date correspond à la date de début de qualification transmise
             par l'organisme de qualification
           x-capabilities: {}
-          x-cardinality: 1843
+          x-cardinality: 1845
         lien_date_fin:
           title: Date de fin de qualification
           type: string
@@ -470,7 +509,7 @@ components:
           description: Cette date correspond à la date de fin de qualification transmise
             par l'organisme de qualification
           x-capabilities: {}
-          x-cardinality: 1543
+          x-cardinality: 1544
         _file.content:
           x-calculated: true
           type: string
@@ -540,6 +579,13 @@ components:
       - artisan
       - particulier
       - conseiller
+      description: hérité du QuoteCase à la création si vide
+    renovation_type:
+      type: string
+      enum:
+      - geste
+      - ampleur
+      description: hérité du QuoteCase à la création si vide
     quote_check_metadata:
       type: object
       properties:
@@ -576,6 +622,7 @@ components:
             - Volet isolant
             - Ventilation Mécanique Double-Flux
             - Ventilation Mécanique Simple-Flux
+      description: hérité du QuoteCase à la création si vide
     quote_check_status:
       type: string
       enum:
@@ -866,25 +913,37 @@ components:
         id:
           type: string
           description: UUID unique
-        reference:
-          type: string
-          nullable: true
         parent_id:
           type: string
           nullable: true
         case_id:
           type: string
           nullable: true
+          description: disponible si appelé depuis QuoteCase et non directement
         status:
           "$ref": "#/components/schemas/quote_check_status"
         filename:
           type: string
           nullable: true
-        metadata:
-          "$ref": "#/components/schemas/quote_check_metadata"
+        reference:
+          type: string
           nullable: true
+          description: référence optionnelle, NON unique
         profile:
-          "$ref": "#/components/schemas/profile"
+          allOf:
+          - "$ref": "#/components/schemas/profile"
+          description: hérité du QuoteCase à la création si vide
+          nullable: true
+        renovation_type:
+          allOf:
+          - "$ref": "#/components/schemas/renovation_type"
+          description: hérité du QuoteCase à la création si vide
+          nullable: true
+        metadata:
+          allOf:
+          - "$ref": "#/components/schemas/quote_check_metadata"
+          description: hérité du QuoteCase à la création si vide
+          nullable: true
         gestes:
           type: array
           items:
@@ -969,6 +1028,14 @@ components:
           description: UUID unique
         reference:
           type: string
+          nullable: true
+          description: référence optionnelle, NON unique
+        profile:
+          "$ref": "#/components/schemas/profile"
+        renovation_type:
+          "$ref": "#/components/schemas/renovation_type"
+        metadata:
+          "$ref": "#/components/schemas/quote_check_metadata"
           nullable: true
       required:
       - id
